--- a/SimpleCL/Properties/Resources.resx
+++ b/SimpleCL/Properties/Resources.resx
@@ -42,6 +42,9 @@
     <data name="mm_sign_stall" type="System.Resources.ResXFileRef, System.Windows.Forms">
         <value>..\Resources\mm_sign_stall.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
     </data>
+    <data name="mm_sign_skull" type="System.Resources.ResXFileRef, System.Windows.Forms">
+        <value>..\Resources\mm_sign_skull.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    </data>
     <data name="xy_gate" type="System.Resources.ResXFileRef, System.Windows.Forms">
         <value>..\Resources\xy_gate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
     </data>
