--- a/SimpleCL/Properties/Resources.resx
+++ b/SimpleCL/Properties/Resources.resx
@@ -48,4 +48,19 @@
     <data name="xy_gate" type="System.Resources.ResXFileRef, System.Windows.Forms">
         <value>..\Resources\xy_gate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
     </data>
+    <data name="xy_weapon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+        <value>..\Resources\xy_weapon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    </data>
+    <data name="xy_guild" type="System.Resources.ResXFileRef, System.Windows.Forms">
+        <value>..\Resources\xy_guild.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    </data>
+    <data name="xy_stable" type="System.Resources.ResXFileRef, System.Windows.Forms">
+        <value>..\Resources\xy_stable.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    </data>
+    <data name="xy_etc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+        <value>..\Resources\xy_etc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    </data>
+    <data name="xy_armor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+        <value>..\Resources\xy_armor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    </data>
 </root>
