Add shop npcs and opening + buying items, add skill and item icons

--- a/SimpleCL/Properties/Resources.resx
+++ b/SimpleCL/Properties/Resources.resx
@@ -63,4 +63,7 @@
     <data name="xy_armor" type="System.Resources.ResXFileRef, System.Windows.Forms">
         <value>..\Resources\xy_armor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
     </data>
+    <data name="xy_potion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+        <value>..\Resources\xy_potion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    </data>
 </root>
